--- a/index.html
+++ b/index.html
@@ -106,5 +106,13 @@
         </script>
 
         <script type="text/babel" src="./react.js"></script>
+        <script>
+            var number = 10;
+
+            var a = ++number * 3 - number-- * 2;
+            var b = number++ * 2 - --number * 3;
+
+            console.log(a + b);
+        </script>
     </body>
 </html>
